# module-ncurses

./: ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-ncurses-module.spec
docs/: ncurses-module-doc.html
examples/: worm.q
src/: Makefile.am  QC_Panel.cc  QC_Window.cc  ncurses-module.h  ncurses.cc
test/: ncurses.q
